fixed horizontal scrollbar

--- a/styles/Layout.module.css
+++ b/styles/Layout.module.css
@@ -4,9 +4,6 @@
   justify-content: space-between;
   min-height: 100vh;
 }
-.footer {
-  width: 100vw;
-}
 .container {
   display: grid;
   grid-template-columns: 3fr 5fr;
